--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
 	id 'java'
 	id 'eclipse' // optional (to generate Eclipse project files)
-	id 'idea' // optional (to generate IntelliJ IDEA project files)
+	id 'idea'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72' // optional (to generate IntelliJ IDEA project files)
 }
 
 repositories {
@@ -10,6 +11,7 @@ repositories {
 
 dependencies {
 	testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 test {
@@ -17,4 +19,15 @@ test {
 	testLogging {
 		events "passed", "skipped", "failed"
 	}
+	testLogging.showStandardStreams = true
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
